src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>AM_Filter__c</fullName>
        <formula>IF( Area_Property_Manager__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APM_Filter__c</fullName>
        <formula>IF( Area_Property_Manager__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APM Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Property Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brochure_Link__c</fullName>
        <label>Brochure Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>Company__r.c2g__ShortStreet__c + &apos;, &apos; + Company__r.c2g__City__c + &apos;, &apos; + Company__r.c2g__ZipPostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <formula>Company__r.c2g__LogoURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <formula>Company__r.c2g__Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_used_number_of_workstations__c</fullName>
        <label>Current used number of workstations</label>
        <summarizedField>Inventory__c.Workstations__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Not Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory__c.Suite_Status__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_used_size_sq_ft__c</fullName>
        <label>Current used size sq ft</label>
        <summarizedField>Inventory__c.Size_sq_ft__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Not Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory__c.Suite_Status__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Form_Developer_Name__c</fullName>
        <formula>Company__r.Direct_Debit_Form_Developer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Debit Form Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>text(Company__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Structure__c</fullName>
        <formula>TEXT(Company__r.Funding_Structure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <label>Google Maps Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gross_Internal_Area__c</fullName>
        <inlineHelpText>Total area of whole building - all suites inventories &amp; common parts.</inlineHelpText>
        <label>Gross Internal Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head_Landlord_Consent__c</fullName>
        <inlineHelpText>Is Head landlord consent required for the underletting?</inlineHelpText>
        <label>Head Landlord Consent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OwnershipTitleType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_Lease_Compliance__c</fullName>
        <inlineHelpText>Is the customer to comply with the terms of the Head Lease?</inlineHelpText>
        <label>Head Lease Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OwnershipTitleType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_Lease_Parties__c</fullName>
        <inlineHelpText>Who are the Parties of the Head Lease?</inlineHelpText>
        <label>Head Lease Parties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Desk_Price_PCM__c</fullName>
        <label>Hot Desk Price PCM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Charge_per_sq_ft__c</fullName>
        <inlineHelpText>Cost per month.</inlineHelpText>
        <label>Insurance per sq ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_building_listed__c</fullName>
        <label>Is the building listed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Registry_Number__c</fullName>
        <label>Land Registry Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Firm</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account record type is not &quot;Legal&quot;</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Legal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Legal Firm)</relationshipLabel>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LossOfRecentYears__c</fullName>
        <label>Loss of Recent Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Available_number_of_workstations__c</fullName>
        <label>Max Available number of workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Available_size_sq_ft__c</fullName>
        <label>Max Available size sq ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Internal_Area__c</fullName>
        <inlineHelpText>Size sq ft sum of all actual inventories either available or currently let.</inlineHelpText>
        <label>Net Internal Area</label>
        <summarizedField>Inventory__c.Size_sq_ft__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory__c.Suite_Status__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Actual Suite</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OwnershipTitleType__c</fullName>
        <label>Ownership Title Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freehold</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Filter__c</fullName>
        <formula>IF( Property_Manager__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>CASE( TEXT(Region__c),
            &quot;Manchester City Centre&quot;,  &quot;Bruntwood&quot;,
            &quot;Liverpool&quot;, &quot;Bruntwood&quot;,
            &quot;Manchester Region&quot;, &quot;Bruntwood&quot;,
            &quot;Birmingham&quot;, &quot;Bruntwood&quot;,
            &quot;Leeds&quot;, &quot;Bruntwood&quot;,
            &quot;Manchester Science Partnerships&quot;, &quot;MSP&quot;,
            &quot;Salford Innovation Park&quot;, &quot;MSP&quot;,
            &quot;Alderley Park&quot;, &quot;Alderley Park&quot;,
            &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image_1__c</fullName>
        <formula>IMAGE(  Property_Image_Link_1__c , &apos;Property Image 1&apos;)</formula>
        <label>Property Image 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image_2__c</fullName>
        <formula>IMAGE( Property_Image_Link_2__c , &apos;Property Image 2&apos;)</formula>
        <label>Property Image 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image_3__c</fullName>
        <formula>IMAGE( Property_Image_Link_3__c , &apos;Property Image 3&apos;)</formula>
        <label>Property Image 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Image_Link_1__c</fullName>
        <label>Property Image Link 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Image_Link_2__c</fullName>
        <label>Property Image Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Image_Link_3__c</fullName>
        <label>Property Image Link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Image_URL__c</fullName>
        <label>Property Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Reference__c</fullName>
        <label>Property Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_USPs__c</fullName>
        <label>Property USP&apos;s</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quote_Header_Image__c</fullName>
        <formula>IMAGE( Quote_Header_Link__c ,&apos;Quote Header Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Header Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Header_Link__c</fullName>
        <label>Quote Header Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RH_Filter__c</fullName>
        <formula>IF( Regional_Head__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RH Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Filter__c</fullName>
        <formula>IF( Risk_Manager__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reception_Email_Address__c</fullName>
        <formula>Reception__r.Email</formula>
        <label>Reception Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reception_Filter__c</fullName>
        <formula>IF( Reception__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reception Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reception_Phone_Number__c</fullName>
        <formula>Reception__r.Phone</formula>
        <label>Reception Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reception</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft__c</fullName>
        <label>Rent per sq ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSC_Filter__c</fullName>
        <formula>IF( Serviced_Space_Coordinator__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSC Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Charge_per_sq_ft__c</fullName>
        <label>Service Charge per sq ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serviced_Package_Details__c</fullName>
        <label>Serviced Package Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Serviced_Space_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Serviced Space Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serviced_Space_Package__c</fullName>
        <label>Serviced Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Inclusive</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>VOIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serviced_Space_Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Serviced Space Surveyor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_City__c</fullName>
        <formula>Address__c+&apos;, &apos;+Street__c+&apos;, &apos;+City__c+&apos;, &apos;+County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street/City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superior_Lease_Covenant__c</fullName>
        <label>Superior Lease Covenant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superior_Lease_Parties__c</fullName>
        <label>Superior Lease Parties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superior_Lease_Start_Date__c</fullName>
        <label>Superior Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Usual_Business_Hours__c</fullName>
        <label>Usual Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All_Alderley_Park_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <label>All Alderley Park Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Birmingham_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <label>All Birmingham Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Leeds_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <label>All Leeds Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Liverpool_Properties</fullName>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Liverpool</value>
        </filters>
        <label>All Liverpool Properties</label>
    </listViews>
    <listViews>
        <fullName>All_MSP_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Manchester Science Partnerships</value>
        </filters>
        <label>All MSP Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Manchester_City_Centre_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Manchester City Centre</value>
        </filters>
        <label>All Manchester City Centre Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Manchester_Region_Properties</fullName>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Manchester Region</value>
        </filters>
        <label>All Manchester Region Properties</label>
    </listViews>
    <listViews>
        <fullName>All_Properties</fullName>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Properties</label>
    </listViews>
    <listViews>
        <fullName>All_SIP_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Salford Innovation Park</value>
        </filters>
        <label>All SIP Properties</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Properties</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Post_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
        </filters>
        <label>Inactive Properties</label>
    </listViews>
    <listViews>
        <fullName>My_Properties</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8)</booleanFilter>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Reception__c</columns>
        <columns>Serviced_Space_Coordinator__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Asset_Management_Head__c</columns>
        <columns>Regional_Head__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PM_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reception_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SSC_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AM_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>APM_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RM_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RH_Filter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Properties</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Property_Brochure_Links</fullName>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Brochure_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Property Brochure Links</label>
    </listViews>
    <listViews>
        <fullName>Property_Management_Structure</fullName>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Property Management Structure</label>
    </listViews>
    <listViews>
        <fullName>Serviced_Space_Properties</fullName>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>NAME</columns>
        <columns>Serviced_Space_Package__c</columns>
        <columns>Serviced_Space_Coordinator__c</columns>
        <columns>Serviced_Space_Surveyor__c</columns>
        <columns>Reception__c</columns>
        <columns>Property_Manager__c</columns>
        <columns>Risk_Manager__c</columns>
        <columns>Area_Property_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Serviced_Space_Coordinator__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Serviced Space Properties</label>
    </listViews>
    <listViews>
        <fullName>Unmanned_Properties</fullName>
        <columns>NAME</columns>
        <columns>Property_Manager__c</columns>
        <columns>Reception__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reception__c</field>
            <operation>notContain</operation>
            <value>Reception</value>
        </filters>
        <label>Unmanned Properties</label>
    </listViews>
</CustomObject>